Bug 392626 - Tab changes when an unselected tab is closed
Summary: Tab changes when an unselected tab is closed
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.4
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-02 02:53 UTC by Nicolás Alvarez
Modified: 2023-06-03 22:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolás Alvarez 2018-04-02 02:53:07 UTC
If a tab is closed while it's not the currently active tab, Yakuake switches to the last tab.

For example, open three tabs. In the third one, run "sleep 5; exit". Switch to the first tab. After 5 seconds, the third tab will close, and Yakuake will switch to the second tab instead of staying where it is.
Comment 1 Nicolás Alvarez 2018-04-02 02:55:18 UTC
Might be the same as bug 146639, which claims it got fixed in SVN r674139, but the problem definitely still occurs.
Comment 2 Patrick Silva 2018-04-22 20:47:39 UTC
Reproducible with yakuake 3.0.5 on Arch Linux.
Comment 3 Justin Zobel 2022-11-21 08:22:14 UTC
Thank you for reporting this issue in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 4 Patrick Silva 2022-12-01 10:39:32 UTC
It's still reproducible on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Graphics Platform: Wayland
Comment 5 Bug Janitor Service 2023-06-02 21:08:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/yakuake/-/merge_requests/103
Comment 6 Nicolas Fella 2023-06-03 22:41:31 UTC
Git commit baaac15a8f52d044dc6a712c96e2c68fc4209315 by Nicolas Fella, on behalf of Teague Millette.
Committed on 03/06/2023 at 22:41.
Pushed by nicolasfella into branch 'release/23.04'.

Prevent unnecessary tab switching on tab close
(cherry picked from commit 5797a3fe00a859ad185c7b53c273e468db813b3f)

M  +3    -1    app/tabbar.cpp

https://invent.kde.org/utilities/yakuake/-/commit/baaac15a8f52d044dc6a712c96e2c68fc4209315