Prevent unnecessary tab switching on tab close

BUG: 392626